添加文件上传下载 swagger 注释
